IEEE logo is now aligned with the navigation. fixes #1112

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -79,7 +79,7 @@ table.main td.center .center-pad {
 #header .banner {
     position:relative;
     top:17px;
-    left:19px;
+    left:10px;
 }
 
 #header a.home {
